--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title>Transformation.run</title>
 </head>
 <body style="background:black;">
-<img src="TransformationDotRun.jpg"/>
+<center><img src="TransformationDotRun.jpg" style="max-width:100%;height:auto;width:auto;"/></center>
 </body>
 </html>
